# poly-attention

./: .gitignore  README.md  pyproject.toml  train_enwik8.py  train_function_composition.py
poly_attention/: __init__.py  flash_poly_attention.py  n_poly_attention.py  poly_attention.py
tests/: test_poly_attention.py
