[project]
name = "poly-attention"
version = "0.2.5"
description = "PolyAttention"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.10"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'attention mechanism',
]

classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
]

dependencies = [
    "einx>=0.3.0",
    "einops>=0.8.1",
    "rotary-embedding-torch>=0.8.9",
    "torch>=2.5",
]

[project.urls]
Homepage = "https://pypi.org/project/poly-attention/"
Repository = "https://codeberg.org/lucidrains/poly-attention"

[project.optional-dependencies]
examples = []
test = [
    "pytest"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "poly_attention",
    "pyproject.toml",
    "README.md",
    "LICENSE"
]

[tool.hatch.build.targets.wheel]
packages = ["poly_attention"]
